[package]
name = "deuces-rs"
description = "A port of Deuces library implemented in Rust"
homepage = "https://github.com/MarshHawk/deuces-rs"
categories = ["poker", "texas-holdem"]
keywords = ["poker", "texas-holdem"]
license = "MIT"
version = "0.2.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
rand = "0.8.5"
